@@ -1,3 +1,7 @@
+2017-04-25  Gary Dismukes  <dismukes@adacore.com>
+
+	* exp_util.adb, exp_util.ads, types.ads: Minor reformatting.
+
 2017-04-25  Bob Duff  <duff@adacore.com>
 
 	* err_vars.ads, fmap.adb, fmap.ads, comperr.adb, fname-sf.adb,
